Fixed suggested events wrap.

--- a/Styles/layout-home.css
+++ b/Styles/layout-home.css
@@ -43,7 +43,7 @@
     }
 
     .suggested-events {
-        flex-wrap: nowrap;
+        flex-wrap: wrap;
         flex-direction: column;
         height: 200vh;
         align-items: center space-around;
@@ -262,7 +262,7 @@ ul {
     display: flex;
     flex-direction: row;
     height: 100vh;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     padding-bottom: 0em;
     padding-top: 0em;
     margin-left: 0.5em;
